--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 <body>
     <main>
         <dev>
-            <p>
-                dois coracoes apaixonados em uma grande aventura em uma ilha deserta eles acabaram ficando ilhados por seu barco de pesca ter afundado eles lutam par
-            </p>
+            
+               
+              <p>  voce esta em alto mar rodeado por varioss tubaroes 
+            <p
+            > <button> class= <btn-proximo>'' <data-> proximo= ''1'  pula na agua
+
+            </button>atira o sinalizador
 
         </dev>
 
